--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "prepare": "husky && chmod ug+x .husky/*"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
     "lucide-react": "^0.542.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
